--- a/style.css
+++ b/style.css
@@ -169,6 +169,26 @@ ul li a {
     left: 825px;
 }
 
+/* feature section styles */
+.featur-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0px;
+}
+
+.feature-img{
+    background-color: #0A0826;
+}
+
+.feature-img img{
+    width: 100%;
+}
+.featur-container .feature-content{
+    width: 50%;
+    padding-left: 50px;
+    color: var(--color-primary);
+}
 /* footer styles */
 footer{
     height: 30vh;
@@ -191,3 +211,65 @@ footer div i{
     padding: 20px 10px;
 }
 
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px 10px;
+    }
+    
+    nav{
+        flex-direction: column;
+    }
+    ul{
+        padding-top: 10px;
+    }
+    ul li{
+        display: block;
+
+    }
+    .banner-container{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    .banner-content h1{
+        font-size: 2rem;
+        line-height: normal;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .banner-img{
+        width: calc(100% - 30px);
+    }
+
+   .company-logo{
+    width: calc(100% - 40px);
+    border: 0;
+    text-align: center;
+    margin: 0 15px;
+   }
+   .company-logo img{
+    padding: 0;
+    margin: 10px 5px;
+   }
+   .container{
+    grid-template-columns: repeat(1, 1fr);
+    padding: 10px 0;
+   }
+   .see-btn{
+    left: 110px;
+   }
+   .featur-container{
+    flex-direction: column-reverse;
+    /* text-align: center; */
+    padding: 10px;
+   }
+   .feature-img{
+    width: 90%;
+    border-radius: 8px;
+    margin-top: 20px;
+   }
+   .featur-container .feature-content{
+    text-align: center;
+    padding-left: 10px;
+    width: 90%;
+   }
+}
